--- a/BLL/Sql/1_database.sql.template
+++ b/BLL/Sql/1_database.sql.template
@@ -2,9 +2,14 @@ USE [master]
 GO
 --g:\Program Files\Microsoft SQL Server\MSSQL.1\MSSQL\Data\
 
-CREATE DATABASE [@INITIAL_CATALOG@] ON  PRIMARY 
-( NAME = N'@INITIAL_CATALOG@_Data', FILENAME = N'@DBPATH@\@INITIAL_CATALOG@_Data.MDF', SIZE = 10MB,  MAXSIZE = UNLIMITED, FILEGROWTH = 10%) LOG ON 
-( NAME = N'@INITIAL_CATALOG@_Log', FILENAME = N'@DBPATH@\@INITIAL_CATALOG@_Log.LDF', SIZE = 512KB, MAXSIZE = UNLIMITED, FILEGROWTH = 10%) COLLATE Slovenian_CI_AS
+IF EXISTS (SELECT name FROM master.dbo.sysdatabases WHERE name = N'@INITIAL_CATALOG@')
+	PRINT 'Database exists'
+ELSE
+BEGIN
+	CREATE DATABASE [@INITIAL_CATALOG@] ON  PRIMARY 
+	( NAME = N'@INITIAL_CATALOG@_Data',  SIZE = 10MB,  MAXSIZE = UNLIMITED, FILEGROWTH = 10%) LOG ON 
+	( NAME = N'@INITIAL_CATALOG@_Log', SIZE = 512KB, MAXSIZE = UNLIMITED, FILEGROWTH = 10%) COLLATE Slovenian_CI_AS
+END
 	
 GO
 EXEC dbo.sp_dbcmptlevel @dbname=N'@INITIAL_CATALOG@', @new_cmptlevel=90
