kind of working deployer
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@112 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/BLL/Sql/1_1_user.sql.template
+++ b/BLL/Sql/1_1_user.sql.template
@@ -1,12 +1,12 @@
-CREATE LOGIN [@INITIAL_CATALOG@] WITH PASSWORD = N'@PASS@', DEFAULT_DATABASE=[@INITIAL_CATALOG@], CHECK_EXPIRATION=OFF, CHECK_POLICY=OFF
+CREATE LOGIN [@USERNAME@] WITH PASSWORD = N'@PASS@', DEFAULT_DATABASE=[@INITIAL_CATALOG@], CHECK_EXPIRATION=OFF, CHECK_POLICY=OFF
 GO
 
 USE @INITIAL_CATALOG@
 GO
 
-IF NOT EXISTS (SELECT * FROM sys.database_principals WHERE name = N'@INITIAL_CATALOG@')
+IF NOT EXISTS (SELECT * FROM sys.database_principals WHERE name = N'@USERNAME@')
 BEGIN
-    CREATE USER [@INITIAL_CATALOG@] FOR LOGIN [@INITIAL_CATALOG@] WITH DEFAULT_SCHEMA=[dbo];
-    EXEC sp_addrolemember N'db_owner', N'@INITIAL_CATALOG@'
+    CREATE USER [@USERNAME@] FOR LOGIN [@USERNAME@] WITH DEFAULT_SCHEMA=[dbo];
+    EXEC sp_addrolemember N'db_owner', N'@USERNAME@'
 END
 GO
