kind of working deployer
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@112 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -48,7 +48,7 @@
     <add name="DefaultConnection" connectionString="server=tartar.netinet.si;uid=auth;pwd=auth;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
 
 
-    <add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />
+    <!-- add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" /-->
     <add name="Bamboo" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
     <add name="MsSqlConnectionString13" connectionString=";Pooling=true;" />
     <add name="MsSqlConnectionStringCustom" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
@@ -65,6 +65,7 @@
     <add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-SkupnaBaza;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
     <!--<add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="user id=wds_test;password=wds_test_1234*;data source=cswebrazvoj;initial catalog=SkupnaBaza;packet size=4096" providerName="System.Data.SqlClient"/>-->
     <add name="eSvetovanje.Kontakti" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-Kontakti;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
+    <add connectionString="Data Source=tartar.netinet.si;Initial Catalog=test7;User ID=test7;Password=izvslf;Pooling=True" name="MsSqlConnectionString" />
   </connectionStrings>
   <fiftyOne>
     <redirect firstRequestOnly="true" mobileHomePageUrl="http://zrszm.t.renderspace.net" timeout="20" devicesFile="~/App_Data/Devices.dat" mobilePagesRegex="/(Mobile)/">
