--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -49,9 +49,14 @@
 
 
     <!--<add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />-->
-<add connectionString="Data Source=tartar.netinet.si;Initial Catalog=test7;User ID=test7;Password=izvslf;Pooling=True" name="MsSqlConnectionString" />
+<!-- <add connectionString="Data Source=tartar.netinet.si;Initial Catalog=test7;User ID=test7;Password=izvslf;Pooling=True" name="MsSqlConnectionString" /> -->
+    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" />
+    
 
-    <add name="Bamboo" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
+    <!--<add name="Bamboo" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />-->
+    <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
+    
+    
     <add name="MsSqlConnectionString13" connectionString=";Pooling=true;" />
     <add name="MsSqlConnectionStringCustom" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
 
