--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -9,6 +9,15 @@
     </system.web>
   </location>
 
+  <location path="Users.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
   <location path="Structure.aspx">
     <system.web>
       <authorization>
