git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@118 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -38,9 +38,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
 
-    <add key="WebSiteId" value="7" />
+    <add key="WebSiteId" value="1" />
     <add key="PublishRoleMapping" value="publisher" />
-    <add key="PublishFlag" value="false" />
+    <add key="PublishFlag" value="true" />
     <add key="CacheDuration" value="3600" />
   </appSettings>
   <connectionStrings>
@@ -58,7 +58,8 @@
     
     
     <add name="MsSqlConnectionString13" connectionString=";Pooling=true;" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
+   <!-- <add name="MsSqlConnectionStringCustom" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />-->
+    <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
 
     
 
