--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -233,6 +233,13 @@
       <DependentUpon>ScaffoldVirtualTableList.ascx</DependentUpon>
     </Compile>
     <Compile Include="adm\AuthorizationHelper.cs" />
+    <Compile Include="adm\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="adm\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="adm\ExcelExport.ashx.cs">
       <DependentUpon>ExcelExport.ashx</DependentUpon>
     </Compile>
@@ -406,6 +413,7 @@
     <Content Include="adm\css\dashboard.css" />
     <Content Include="adm\css\default_editor.css" />
     <Content Include="adm\css\one.css" />
+    <Content Include="adm\Default.aspx" />
     <Content Include="adm\fonts\glyphicons-halflings-regular.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -673,16 +681,15 @@
       <DependentUpon>MenuGroups.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Utils\One.asmx.cs">
-      <DependentUpon>One.asmx</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Utils\Rss.aspx.cs">
       <DependentUpon>Rss.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Utils\Rss.aspx.designer.cs">
       <DependentUpon>Rss.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\SiteMapHandler.ashx.cs">
+      <DependentUpon>SiteMapHandler.ashx</DependentUpon>
     </Compile>
     <Compile Include="Utils\TestException.aspx.cs">
       <DependentUpon>TestException.aspx</DependentUpon>
@@ -742,9 +749,10 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="site_specific\robots.txt" />
+    <Content Include="site_specific\robots.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Utils\MenuGroups.asmx" />
-    <Content Include="Utils\One.asmx" />
     <Content Include="Utils\TestException.aspx" />
     <Content Include="web.config">
       <SubType>Designer</SubType>
@@ -756,6 +764,7 @@
     <Content Include="Utils\BambooExcelExport.ashx" />
     <Content Include="Utils\BambooOneToManyData.ashx" />
     <Content Include="Utils\VirtualTable.ashx" />
+    <Content Include="Utils\SiteMapHandler.ashx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="adm\ContentEdit.aspx" />
