--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -81,6 +81,7 @@
     </redirect>
     <log logFile="~/App_Data/Log.txt" logLevel="Info" />
     <detection binaryFilePath="~/App_Data/51Degrees.dat" />
+    <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h"/>
   </fiftyOne>
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="sl-SI" culture="sl-SI" />
