--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -312,6 +312,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Base\HttpHandlerRoute.cs" />
     <Compile Include="Base\NoIdAdapter.cs" />
     <Compile Include="Base\Section.cs" />
     <Compile Include="CommonModules\ArticleList.ascx.cs">
@@ -683,6 +684,9 @@
       <DependentUpon>MenuGroups.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Utils\Robots.ashx.cs">
+      <DependentUpon>Robots.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Utils\Rss.aspx.cs">
       <DependentUpon>Rss.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -752,9 +756,6 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="site_specific\robots.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Utils\MenuGroups.asmx" />
     <Content Include="Utils\TestException.aspx" />
     <Content Include="web.config">
@@ -768,6 +769,7 @@
     <Content Include="Utils\BambooOneToManyData.ashx" />
     <Content Include="Utils\VirtualTable.ashx" />
     <Content Include="Utils\SiteMapHandler.ashx" />
+    <Content Include="Utils\Robots.ashx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="adm\ContentEdit.aspx" />
@@ -860,6 +862,7 @@
     <Folder Include="AdminExtensions\" />
     <Folder Include="App_Data\" />
     <Folder Include="App_GlobalResources\" />
+    <Folder Include="site_specific\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
