--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
+
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="Structure.aspx" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
+  
   <location path="ContentEdit.aspx">
     <system.web>
       <authorization>
