--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -76,7 +76,7 @@
   <location path="SubscriptionManager.aspx">
     <system.web>
       <authorization>
-        <allow roles="admin, all, subscriptions" />
+        <allow roles="admin, all, Subscriptions" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -85,7 +85,7 @@
   <location path="dictionary.aspx">
     <system.web>
       <authorization>
-        <allow roles="admin, all, dictionary" />
+        <allow roles="admin, all, Dictionary" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -95,24 +95,6 @@
     <system.web>
       <authorization>
         <allow roles="admin, all, FileManager" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="FileManager2.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="admin, all, FileManager" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="Editor.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="admin, all, admin" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -148,9 +130,40 @@
   <location path="Website.aspx">
     <system.web>
       <authorization>
+        <allow roles="admin, Website" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="ScaffoldConfig.aspx">
+    <system.web>
+      <authorization>
         <allow roles="admin" />
         <deny users="*" />
       </authorization>
     </system.web>
   </location>
+
+  <location path="RssFeeds.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin, RssFeeds" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Regulars.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin, Regulars" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  
+
+
 </configuration>
