--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -40,7 +40,7 @@
 
     <add key="WebSiteId" value="1" />
     <add key="PublishRoleMapping" value="publisher" />
-    <add key="PublishFlag" value="true" />
+    <add key="PublishFlag" value="false" />
     <add key="CacheDuration" value="3600" />
   </appSettings>
   <connectionStrings>
