--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -42,6 +42,12 @@
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="CacheDuration" value="3600" />
+
+    <add key="FacebookAppId" value="862156870463013" />
+    <add key="FacebookAppSecret" value="3b42f9b2a5267c59748b79cf52686d8b" />
+      <add key="GoogleClientId" value="326977998446-9msnb40lreglphkldv09dt9frrkelu7b.apps.googleusercontent.com" />
+      <add key="GoogleClientSecret" value="cLsWfI6BLk71OaE1j1aaUK1y" />
+        
   </appSettings>
   <connectionStrings>
     <add name="ProfileSqlConnectionString" connectionString="server=tartar.netinet.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;" />
@@ -134,6 +140,8 @@
       <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
     </modules>
     <handlers>
+      <add path="/callbacks/google" name="Owin" verb="*" type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb"/>
+      
       <add path="*.gif" name="gif2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
       <add path="*.png" name="png2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
       <add path="*.jpg" name="jpg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
