--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -164,6 +164,9 @@
       <add path="*.ai" name="ai" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.swf" name="swf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
     </handlers>
+    <staticContent>
+      <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge"/>
+    </staticContent>
   </system.webServer>
   <system.net>
     <mailSettings>
