--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -38,7 +38,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
 
-    <add key="WebSiteId" value="1" />
+    <add key="WebSiteId" value="2" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="CacheDuration" value="3600" />
@@ -89,7 +89,7 @@
     <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h"/>
   </fiftyOne>
   <system.web>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="sl-SI" culture="sl-SI" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="System.Web.Optimization" />
