--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -395,6 +395,7 @@
     </Compile>
     <Compile Include="Controls\BreadCrumb.cs" />
     <Compile Include="Controls\GetMeaning.cs" />
+    <Compile Include="Controls\JavascriptVars.cs" />
     <Compile Include="Controls\MenuGroup.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
