--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="51Degrees.mobi" version="3.1.4.5" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.9.13" targetFramework="net45" />
+  <package id="BundleTransformer.SassAndScss" version="1.9.13" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
@@ -12,7 +14,7 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
